--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -106,12 +106,12 @@
                                         <div class="card">
                                             <div class="card-body">
                                                 <button id="checkphone_setting_getsetting" class="btn btn-primary listener_api_request">Запросить</button>
-                                                <button id="checkphone_setting_getsetting_off" class="btn btn-primary hiddenclass" type="button" disabled>
+                                                <button id="checkphone_setting_getsetting_loader" class="btn btn-primary hiddenclass" type="button" disabled>
                                                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                                                    Запросить
+                                                    Ожидайте
                                                 </button>
                                                 <p class="card-text">
-                                                    <pre>{"id_chat":"vzilehalin77086398bot","id_ту":"vzilehalin77086398bot"}</pre>
+                                                    <pre id="checkphone_setting_getsetting_response"></pre>
                                                 </p>
                                             </div>
                                         </div>
@@ -135,7 +135,7 @@
                                                     Запросить
                                                 </button>
                                                 <p class="card-text">
-                                                    <pre>{"id_chat":"vzilehalin77086398bot","id_ту":"vzilehalin77086398bot"}</pre>
+                                                    <pre id="checkphone_setting_setsetting_response"></pre>
                                                 </p>
                                             </div>
                                         </div>
