--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -125,12 +125,12 @@
                                             <div class="card-header">
                                                 <div class="input-group flex-nowrap">
                                                     <span class="input-group-text" id="addon-wrapping">id_chat</span>
-                                                    <input type="text" class="form-control" placeholder="id_chat" aria-label="id_chat" aria-describedby="addon-wrapping">
+                                                    <input id="checkphone_setting_setsetting_id_chat" type="text" class="form-control" placeholder="id_chat" aria-label="id_chat" aria-describedby="addon-wrapping">
                                                 </div>
                                             </div>
                                             <div class="card-body">
                                                 <button id="checkphone_setting_setsetting" class="btn btn-primary listener_api_request">Запросить</button>
-                                                <button id="checkphone_setting_setsetting_off" class="btn btn-primary hiddenclass" type="button" disabled>
+                                                <button id="checkphone_setting_setsetting_loader" class="btn btn-primary hiddenclass" type="button" disabled>
                                                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                                     Запросить
                                                 </button>
