--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -49,6 +49,15 @@
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-checkphone">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-checkphone" aria-expanded="false" aria-controls="flush-collapse-checkphone">
+                {% if statusCheckphoneRobot == 0 %}
+                    <span style="margin-right: 10px" class="badge bg-success">
+                        Working
+                    </span>
+                {% else %}
+                    <span style="margin-right: 10px" class="badge bg-danger">
+                        Stopped
+                    </span>
+                {% endif %}
                 Номера
             </button>
         </h2>
