[Checkphone] add 403 Forbidden

--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -189,6 +189,10 @@
                                             <span class="input-group-text" id="addon-wrapping">Номер телефона</span>
                                             <input id="checkphone_getphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">
                                         </div>
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text" id="addon-wrapping">Ид устройства</span>
+                                            <input id="checkphone_getphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">
+                                        </div>
                                     </div>
                                     <div class="card-body">
                                         <button id="checkphone_getphone" class="btn btn-primary listener_api_request">Запросить</button>
@@ -216,6 +220,7 @@
                                 <b>Request</b>
                                 <ul>
                                     <li><i>phone</i> - номер телефона</li>
+                                    <li><i>id_dev</i> - ид устройства</li>
                                 </ul>
                                 <b>Request JSON</b>
                                 <ul>
@@ -242,6 +247,10 @@
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text" id="addon-wrapping">Номер телефона</span>
                                             <input id="checkphone_setphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">
+                                        </div>
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text" id="addon-wrapping">Ид устройства</span>
+                                            <input id="checkphone_setphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">
                                         </div>
                                     </div>
                                     <div class="card-body">
