[Checkphone] add 403 Forbidden FIX

--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -163,6 +163,10 @@
                         <div id="flush-collapse-checkphoneGetPhone" class="accordion-collapse collapse" aria-labelledby="flush-checkphoneGetPhone" data-bs-parent="#accordionFlushCheckphone">
                             <div class="accordion-body">
                                 <p>(GET) <a href="https://api.stnsystem.tk/checkphone/client/88005553535">https://api.stnsystem.tk/checkphone/client/{phone}</a> - просмотреть все записи по номеру {phone}</p>
+                                <b>Request</b>
+                                <ul>
+                                    <li><i>id_dev</i> - ид устройства</li>
+                                </ul>
                                 <b>Request JSON</b>
                                 <ul>
                                     <li><i>id</i> - ид записи</li>
