--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -193,7 +193,7 @@
                                             <span class="input-group-text" id="addon-wrapping">Номер телефона</span>
                                             <input id="checkphone_getphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">
                                         </div>
-                                        <div class="input-group flex-nowrap">
+                                        <div class="input-group flex-nowrap hiddenclass">
                                             <span class="input-group-text" id="addon-wrapping">Ид устройства</span>
                                             <input id="checkphone_getphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">
                                         </div>
