--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -287,6 +287,70 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-checkphoneCheckQuery">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-checkphoneCheckQuery" aria-expanded="false" aria-controls="flush-collapse-checkphoneCheckQuery">
+                                Тест
+                            </button>
+                        </h2>
+                        <div id="flush-collapse-checkphoneCheckQuery" class="accordion-collapse collapse" aria-labelledby="flush-checkphoneCheckQuery" data-bs-parent="#accordionFlushCheckphone">
+                            <div class="accordion-body">
+
+                                <div class="card">
+                                    <div class="card-header">
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text" id="addon-wrapping">Номер телефона</span>
+                                            <input id="checkphone_setphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">
+                                        </div>
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text" id="addon-wrapping">Ид устройства</span>
+                                            <input id="checkphone_setphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">
+                                        </div>
+                                    </div>
+                                    <div class="card-body">
+                                        <button id="checkphone_setphone" class="btn btn-primary listener_api_request">Запросить</button>
+                                        <button id="checkphone_setphone_loader" class="btn btn-primary hiddenclass" type="button" disabled>
+                                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                            Ожидайте
+                                        </button>
+                                        <p class="card-text">
+                                        <pre id="checkphone_setphone_response">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">id</th>
+                                                        <th scope="col">phone</th>
+                                                        <th scope="col">date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>Mark</td>
+                                                        <td>Otto</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Jacob</td>
+                                                        <td>Thornton</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Jacob</td>
+                                                        <td>Thornton</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </pre>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
