[Checkphone] output count

--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -326,7 +326,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    {% for client in listClient: %}
+                                                    {% for client in listClient %}
                                                         <tr>
                                                             <th scope="row">{{ client.getId() }}</th>
                                                             <td>{{ client.getPhone() }}</td>
